force-app/main/default/objects/Project__c/Project__c.object-meta.xml
<CustomObject>
    <label>Project</label>
    <pluralLabel>Projects</pluralLabel>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Sales Copilot project records. Parent object is Account. Used by Agentforce Voice agent to surface project status, dates, and risks to sales reps hands-free.</description>
</CustomObject>