force-app/main/default/objects/Project__c/fields/Risks__c.field-meta.xml
<CustomField>
    <fullName>Risks__c</fullName>
    <label>Risks</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>